--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,12 +129,21 @@
         <div id="dashboard" class="hidden">
             <h2 class="text-2xl font-semibold text-gray-700 mb-4 text-center">Welcome to your Dashboard!</h2>
             <p id="user-info" class="text-center text-gray-600 mb-6"></p>
-            
-            <div class="flex flex-col space-y-4">
-                <button id="fetch-profile-btn" class="btn btn-primary">Fetch My Profile</button>
-                <button id="fetch-subscriptions-btn" class="btn btn-primary">Fetch My Subscriptions</button>
-                <button id="logout-btn" class="btn btn-secondary">Logout</button>
-            </div>
+        
+            <div class="flex flex-col space-y-4 mb-8"> <button id="fetch-profile-btn" class="btn btn-primary">Fetch My Profile</button>
+                 <button id="fetch-subscriptions-btn" class="btn btn-primary">Fetch My Subscriptions</button>
+                  <button id="logout-btn" class="btn btn-secondary">Logout</button>
+             </div>
+
+             <div id="profile-details-area" class="hidden mt-6 p-4 border border-gray-200 rounded-lg">
+                    <h3 class="text-xl font-semibold text-gray-700 mb-4">Your Profile Details</h3>
+                     <div class="overflow-x-auto">
+                             <table class="min-w-full bg-white rounded-lg shadow-sm">
+                         <tbody id="profile-table-body">
+                        </tbody>
+                             </table>
+                     </div>
+        </div>
         </div>
     </div>
 
@@ -153,6 +162,8 @@
         const logoutBtn = document.getElementById('logout-btn');
         const fetchProfileBtn = document.getElementById('fetch-profile-btn');
         const fetchSubscriptionsBtn = document.getElementById('fetch-subscriptions-btn');
+        const profileDetailsArea = document.getElementById('profile-details-area');
+        const profileTableBody = document.getElementById('profile-table-body');
 
         // Function to display messages
         function displayMessage(message, type) {
@@ -174,6 +185,25 @@
             },
             removeToken: () => {
                 localStorage.removeItem('jwtToken');
+            },
+            setUserId: (userId) => {
+            localStorage.setItem('userId', userId);
+            },
+            getUserId: () => {
+                return localStorage.getItem('userId');
+            },
+            removeUserId: () => {
+                localStorage.removeItem('userId');
+            },
+            // --- NEW/MODIFIED: Store/retrieve username ---
+            setUsername: (username) => {
+                localStorage.setItem('username', username);
+            },
+            getUsername: () => {
+                return localStorage.getItem('username');
+            },
+            removeUsername: () => {
+                localStorage.removeItem('username');
             }
         };
 
@@ -244,6 +274,8 @@
 
                 if (response.ok) {
                     TokenManager.setToken(data.data.token); // Assuming your backend sends 'token'
+                    TokenManager.setUserId(data.data.user._id); // Assuming your backend sends '_id'
+                    TokenManager.setUsername(data.data.user.name); // Assuming your backend sends 'name'
                     displayMessage('Sign in successful!', 'success');
                     signinForm.reset(); // Clear form
                     updateUI(); // Update UI to show dashboard
@@ -264,42 +296,88 @@
         });
 
         // Fetch Profile Button (Example of a protected route)
-        fetchProfileBtn.addEventListener('click', async () => {
-            const token = TokenManager.getToken();
-            if (!token) {
-                displayMessage('You are not logged in.', 'error');
-                updateUI();
-                return;
-            }
+         fetchProfileBtn.addEventListener('click', async () => {
+        const token = TokenManager.getToken();
+        const userId = TokenManager.getUserId();
 
-            try {
-                // Assuming you have a protected /api/v1/users/profile route
-                const response = await fetch(`${API_BASE_URL}/users/profile`, {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': `Bearer ${token}`, // Send JWT token
-                        'Content-Type': 'application/json',
-                    },
-                });
+        if (!token || !userId) {
+            displayMessage('You are not logged in or user ID is missing. Please sign in again.', 'error');
+            TokenManager.removeToken();
+            TokenManager.removeUserId();
+            TokenManager.removeUsername();
+            updateUI();
+            return;
+        }
 
-                const data = await response.json();
+        try {
+            const response = await fetch(`${API_BASE_URL}/users/${userId}`, {
+                method: 'GET',
+                headers: {
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json',
+                },
+            });
 
-                if (response.ok) {
-                    displayMessage(`Profile fetched: ${JSON.stringify(data.user)}`, 'success');
-                    // You might want to update userInfo.textContent with actual user data
-                } else {
-                    displayMessage(data.message || 'Failed to fetch profile.', 'error');
-                    if (response.status === 401) { // Token expired or invalid
-                        TokenManager.removeToken();
-                        updateUI();
+            const data = await response.json();
+
+            if (response.ok) {
+                // MODIFIED: Clear previous table content before adding new
+                profileTableBody.innerHTML = ''; 
+
+                const userProfile = data.data; // User object is directly in data.data
+
+                // NEW: Define fields to display and their labels
+                const fieldsToDisplay = {
+                    '_id': 'User ID',
+                    'name': 'Name',
+                    'email': 'Email',
+                    'createdAt': 'Member Since',
+                    'updatedAt': 'Last Updated'
+                };
+
+                // NEW: Populate the table with profile data
+                for (const key in fieldsToDisplay) {
+                    if (userProfile.hasOwnProperty(key)) {
+                        const row = profileTableBody.insertRow();
+                        row.classList.add('border-b', 'border-gray-200', 'last:border-b-0'); // Tailwind classes for row styling
+
+                        const labelCell = row.insertCell();
+                        labelCell.classList.add('px-4', 'py-3', 'font-medium', 'text-gray-700', 'text-left', 'w-1/3'); // Label column
+                        labelCell.textContent = fieldsToDisplay[key];
+
+                        const valueCell = row.insertCell();
+                        valueCell.classList.add('px-4', 'py-3', 'text-gray-800', 'text-right', 'w-2/3'); // Value column
+
+                        let displayValue = userProfile[key];
+                        // Format dates nicely
+                        if (key === 'createdAt' || key === 'updatedAt') {
+                            displayValue = new Date(displayValue).toLocaleString();
+                        }
+                        valueCell.textContent = displayValue;
                     }
                 }
-            } catch (error) {
-                console.error('Error fetching profile:', error);
-                displayMessage('An error occurred while fetching profile.', 'error');
-            }
-        });
+                // END NEW TABLE POPULATION
 
+                profileDetailsArea.classList.remove('hidden'); // NEW: Show the profile details area
+                displayMessage('Profile fetched successfully!', 'success');
+                userInfo.textContent = `Welcome, ${userProfile.name}! Your profile:`; // MODIFIED: Adjust welcome message
+
+            } else {
+                displayMessage(data.message || 'Failed to fetch profile.', 'error');
+                if (response.status === 401 || response.status === 403) {
+                    TokenManager.removeToken();
+                    TokenManager.removeUserId();
+                    TokenManager.removeUsername();
+                    updateUI();
+                }
+                profileDetailsArea.classList.add('hidden'); // NEW: Hide on error
+            }
+        } catch (error) {
+            console.error('Error fetching profile:', error);
+            displayMessage('An error occurred while fetching profile.', 'error');
+            profileDetailsArea.classList.add('hidden'); // NEW: Hide on error
+        }
+    });
         // Fetch Subscriptions Button (Example of a protected route)
         fetchSubscriptionsBtn.addEventListener('click', async () => {
             const token = TokenManager.getToken();
