--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,26 +127,44 @@
 
         <!-- Dashboard Area (Hidden by default) -->
         <div id="dashboard" class="hidden">
-            <h2 class="text-2xl font-semibold text-gray-700 mb-4 text-center">Welcome to your Dashboard!</h2>
-            <p id="user-info" class="text-center text-gray-600 mb-6"></p>
-        
-            <div class="flex flex-col space-y-4 mb-8"> <button id="fetch-profile-btn" class="btn btn-primary">Fetch My Profile</button>
-                 <button id="fetch-subscriptions-btn" class="btn btn-primary">Fetch My Subscriptions</button>
-                  <button id="logout-btn" class="btn btn-secondary">Logout</button>
-             </div>
-
-             <div id="profile-details-area" class="hidden mt-6 p-4 border border-gray-200 rounded-lg">
-                    <h3 class="text-xl font-semibold text-gray-700 mb-4">Your Profile Details</h3>
-                     <div class="overflow-x-auto">
-                             <table class="min-w-full bg-white rounded-lg shadow-sm">
-                         <tbody id="profile-table-body">
-                        </tbody>
-                             </table>
-                     </div>
-        </div>
-        </div>
+    <h2 class="text-2xl font-semibold text-gray-700 mb-4 text-center">Welcome to your Dashboard!</h2>
+    <p id="user-info" class="text-center text-gray-600 mb-6"></p>
+    
+    <div class="flex flex-col space-y-4 mb-8">
+        <button id="fetch-profile-btn" class="btn btn-primary">Fetch My Profile</button>
+        <button id="fetch-subscriptions-btn" class="btn btn-primary">Fetch My Subscriptions</button>
+        <button id="logout-btn" class="btn btn-secondary">Logout</button>
     </div>
 
+    <div id="profile-details-area" class="hidden mt-6 p-4 border border-gray-200 rounded-lg">
+        <h3 class="text-xl font-semibold text-gray-700 mb-4">Your Profile Details</h3>
+        <div class="overflow-x-auto">
+            <table class="min-w-full bg-white rounded-lg shadow-sm">
+                <tbody id="profile-table-body">
+                    </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="subscriptions-area" class="hidden mt-6 p-4 border border-gray-200 rounded-lg">
+        <h3 class="text-xl font-semibold text-gray-700 mb-4">Your Subscriptions</h3>
+        <div class="overflow-x-auto">
+            <table class="min-w-full bg-white rounded-lg shadow-sm">
+                <thead class="bg-gray-50">
+                    <tr>
+                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Price</th>
+                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Frequency</th>
+                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Next Renewal</th>
+                    </tr>
+                </thead>
+                <tbody id="subscriptions-table-body" class="divide-y divide-gray-200">
+                    <tr><td colspan="5" class="text-center py-4 text-gray-500" id="no-subscriptions-message">No subscriptions found.</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    </div>
     <script>
         // Base URL for your backend API
         const API_BASE_URL = 'http://localhost:8000/api/v1';
@@ -164,6 +182,9 @@
         const fetchSubscriptionsBtn = document.getElementById('fetch-subscriptions-btn');
         const profileDetailsArea = document.getElementById('profile-details-area');
         const profileTableBody = document.getElementById('profile-table-body');
+         const subscriptionsArea = document.getElementById('subscriptions-area');
+         const subscriptionsTableBody = document.getElementById('subscriptions-table-body');
+        const noSubscriptionsMessage = document.getElementById('no-subscriptions-message');
 
         // Function to display messages
         function displayMessage(message, type) {
@@ -381,8 +402,13 @@
         // Fetch Subscriptions Button (Example of a protected route)
         fetchSubscriptionsBtn.addEventListener('click', async () => {
             const token = TokenManager.getToken();
+            const userId = TokenManager.getUserId();
+
             if (!token) {
                 displayMessage('You are not logged in.', 'error');
+                TokenManager.removeToken();
+                TokenManager.removeUserId();
+                TokenManager.removeUsername();
                 updateUI();
                 return;
             }
@@ -391,7 +417,7 @@
                 // This route will need to be implemented in your backend's subscribe.routes.js
                 // and subscription.controllers.js to fetch subscriptions for the logged-in user.
                 // Assuming it returns subscriptions for the authenticated user based on their token.
-                const response = await fetch(`${API_BASE_URL}/subscriptions`, { // Or /subscriptions/me if you implement it that way
+                const response = await fetch(`${API_BASE_URL}/subscriptions/${userId}`, { // Or /subscriptions/me if you implement it that way
                     method: 'GET',
                     headers: {
                         'Authorization': `Bearer ${token}`,
@@ -401,16 +427,70 @@
 
                 const data = await response.json();
 
-                if (response.ok) {
-                    displayMessage(`Subscriptions fetched: ${JSON.stringify(data.subscriptions)}`, 'success');
+                 if (response.ok) {
+                const subscriptions = data.data; // This is an array of subscription objects
+
+                // NEW: Clear previous table content and hide no subscriptions message
+                subscriptionsTableBody.innerHTML = ''; 
+                noSubscriptionsMessage.classList.add('hidden');
+
+                if (!subscriptions || subscriptions.length === 0) {
+                    noSubscriptionsMessage.classList.remove('hidden'); // Show message if no subscriptions
+                    displayMessage('No subscriptions found for your account.', 'info');
                 } else {
-                    displayMessage(data.message || 'Failed to fetch subscriptions.', 'error');
-                    if (response.status === 401) {
-                        TokenManager.removeToken();
-                        updateUI();
-                    }
+                    // Loop through each subscription object in the array
+                    subscriptions.forEach(sub => {
+                        const row = subscriptionsTableBody.insertRow();
+                        row.classList.add('hover:bg-gray-100'); // Add hover effect
+
+                        // Populate cells for each subscription
+                        const nameCell = row.insertCell();
+                        nameCell.classList.add('px-4', 'py-3', 'font-medium', 'text-gray-900');
+                        nameCell.textContent = sub.name;
+
+                        const priceCell = row.insertCell();
+                        priceCell.classList.add('px-4', 'py-3', 'text-gray-700');
+                        // Display price with currency if available, assuming 'price' and 'currency' fields exist
+                        priceCell.textContent = `${sub.price ? sub.price.toFixed(2) : 'N/A'} ${sub.currency || ''}`; 
+
+                        const frequencyCell = row.insertCell();
+                        frequencyCell.classList.add('px-4', 'py-3', 'text-gray-700');
+                        frequencyCell.textContent = sub.frequency || 'N/A';
+
+                        const statusCell = row.insertCell();
+                        statusCell.classList.add('px-4', 'py-3', 'font-semibold');
+                        // Add color based on status
+                        let statusColorClass = '';
+                        switch (sub.status) {
+                            case 'ACTIVE': statusColorClass = 'text-green-600'; break;
+                            case 'CANCELLED': statusColorClass = 'text-red-600'; break;
+                            case 'EXPIRED': statusColorClass = 'text-yellow-600'; break;
+                            default: statusColorClass = 'text-gray-600'; break;
+                        }
+                        statusCell.classList.add(statusColorClass);
+                        statusCell.textContent = sub.status || 'N/A';
+
+                        const renewalDateCell = row.insertCell();
+                        renewalDateCell.classList.add('px-4', 'py-3', 'text-gray-700');
+                        renewalDateCell.textContent = sub.renewalDate ? new Date(sub.renewalDate).toLocaleDateString() : 'N/A';
+                    });
+
+                    displayMessage('Subscriptions fetched successfully!', 'success');
                 }
-            } catch (error) {
+                subscriptionsArea.classList.remove('hidden'); // Show the subscriptions area
+            }
+          else {
+                displayMessage(data.message || 'Failed to fetch subscriptions.', 'error');
+                if (response.status === 401 || response.status === 403) {
+                    TokenManager.removeToken();
+                    TokenManager.removeUserId();
+                    TokenManager.removeUsername();
+                    updateUI();
+                }
+                subscriptionsArea.classList.add('hidden'); // Hide on error
+            }
+        }
+             catch (error) {
                 console.error('Error fetching subscriptions:', error);
                 displayMessage('An error occurred while fetching subscriptions.', 'error');
             }
